--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Repository of teaching material for product lines and variability
+email: mathieu.acher@irisa.fr
+description: An open, public repository of teaching material  for product lines, configurable systems, generative approaches, and variability
 baseurl: "/repository" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://127.0.0.1:4000" # the base hostname & protocol for your site
+twitter_username: acherm
+github_username:  FAMILIAR-project
 
-# Build settings
-markdown: redcarpet
+
+
